--- a/proxy/Makefile.am
+++ b/proxy/Makefile.am
@@ -4,6 +4,7 @@ if WITH_PROXY
 INCLUDES = -I$(top_srcdir)/gnulib/lib -I../gnulib/lib \
            -I$(top_builddir)/include -I@top_srcdir@/include \
 	   -I@top_srcdir@/proxy -I@top_srcdir@/src \
+           -I@top_srcdir@/src/util \
            -I@top_srcdir@/src/conf \
            -I@top_srcdir@/src/xen \
            @LIBXML_CFLAGS@ \
@@ -12,19 +13,21 @@ INCLUDES = -I$(top_srcdir)/gnulib/lib -I../gnulib/lib \
 
 libexec_PROGRAMS = libvirt_proxy
 
-libvirt_proxy_SOURCES = libvirt_proxy.c @top_srcdir@/src/xen/xend_internal.c \
-	    @top_srcdir@/src/xen/xen_hypervisor.c @top_srcdir@/src/virterror.c \
-	    @top_srcdir@/src/xen/sexpr.c  \
-	    @top_srcdir@/src/threads.c  \
-            @top_srcdir@/src/xen/xs_internal.c @top_srcdir@/src/buf.c \
+libvirt_proxy_SOURCES = libvirt_proxy.c \
+            @top_srcdir@/src/util/buf.c \
+	    @top_srcdir@/src/util/logging.c \
+            @top_srcdir@/src/util/memory.c \
+	    @top_srcdir@/src/util/threads.c  \
+            @top_srcdir@/src/util/util.c \
+	    @top_srcdir@/src/util/uuid.c \
+            @top_srcdir@/src/util/virterror.c \
             @top_srcdir@/src/conf/capabilities.c \
-            @top_srcdir@/src/memory.c \
             @top_srcdir@/src/conf/storage_encryption_conf.c \
             @top_srcdir@/src/conf/domain_conf.c \
-            @top_srcdir@/src/util.c \
-	    @top_srcdir@/src/event.c \
-	    @top_srcdir@/src/uuid.c \
-	    @top_srcdir@/src/logging.c
+            @top_srcdir@/src/xen/xend_internal.c \
+	    @top_srcdir@/src/xen/xen_hypervisor.c \
+	    @top_srcdir@/src/xen/sexpr.c  \
+            @top_srcdir@/src/xen/xs_internal.c
 libvirt_proxy_LDFLAGS = $(WARN_CFLAGS) $(XEN_LIBS)
 libvirt_proxy_DEPENDENCIES =
 libvirt_proxy_LDADD = ../gnulib/lib/libgnu.la
