--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -1,62 +1,62 @@
-qemud/dispatch.c
-qemud/qemud.c
-qemud/remote.c
-src/bridge.c
-src/conf.c
-src/console.c
+daemon/dispatch.c
+daemon/libvirtd.c
+daemon/remote.c
+src/conf/domain_conf.c
+src/conf/interface_conf.c
+src/conf/network_conf.c
+src/conf/node_device_conf.c
+src/conf/secret_conf.c
+src/conf/storage_conf.c
+src/conf/storage_encryption_conf.c
 src/datatypes.c
-src/domain_conf.c
-src/interface_conf.c
-src/interface_driver.c
-src/iptables.c
+src/interface/netcf_driver.c
 src/libvirt.c
-src/logging.c
-src/lxc_container.c
-src/lxc_controller.c
-src/lxc_driver.c
-src/network_conf.c
-src/network_driver.c
-src/node_device.c
-src/node_device_conf.c
-src/node_device_hal_linux.c
+src/lxc/lxc_container.c
+src/lxc/lxc_controller.c
+src/lxc/lxc_driver.c
+src/network/bridge_driver.c
+src/node_device/node_device_driver.c
+src/node_device/node_device_hal_linux.c
 src/nodeinfo.c
 src/opennebula/one_conf.c
 src/opennebula/one_driver.c
-src/openvz_conf.c
-src/openvz_driver.c
-src/pci.c
+src/openvz/openvz_conf.c
+src/openvz/openvz_driver.c
 src/phyp/phyp_driver.c
-src/proxy_internal.c
-src/qemu_conf.c
-src/qemu_driver.c
-src/remote_internal.c
-src/secret_conf.c
-src/secret_driver.c
-src/security.c
-src/security_selinux.c
-src/storage_backend.c
-src/storage_backend_disk.c
-src/storage_backend_fs.c
-src/storage_backend_iscsi.c
-src/storage_backend_logical.c
-src/storage_backend_scsi.c
-src/storage_backend_mpath.c
-src/storage_conf.c
-src/storage_driver.c
-src/storage_encryption_conf.c
-src/test.c
-src/uml_conf.c
-src/uml_driver.c
-src/util.c
-src/uuid.c
+src/qemu/qemu_conf.c
+src/qemu/qemu_driver.c
+src/remote/remote_driver.c
+src/secret/secret_driver.c
+src/security/security_driver.c
+src/security/security_selinux.c
+src/storage/storage_backend.c
+src/storage/storage_backend_disk.c
+src/storage/storage_backend_fs.c
+src/storage/storage_backend_iscsi.c
+src/storage/storage_backend_logical.c
+src/storage/storage_backend_mpath.c
+src/storage/storage_backend_scsi.c
+src/storage/storage_driver.c
+src/test/test_driver.c
+src/uml/uml_conf.c
+src/uml/uml_driver.c
+src/util/bridge.c
+src/util/conf.c
+src/util/iptables.c
+src/util/logging.c
+src/util/pci.c
+src/util/util.c
+src/util/uuid.c
+src/util/virterror.c
+src/util/xml.c
 src/vbox/vbox_driver.c
 src/vbox/vbox_tmpl.c
-src/virsh.c
-src/virterror.c
-src/xen_inotify.c
-src/xen_internal.c
-src/xen_unified.c
-src/xend_internal.c
-src/xm_internal.c
-src/xml.c
-src/xs_internal.c
+src/xen/proxy_internal.c
+src/xen/xend_internal.c
+src/xen/xen_driver.c
+src/xen/xen_hypervisor.c
+src/xen/xen_inotify.c
+src/xen/xm_internal.c
+src/xen/xs_internal.c
+tools/console.c
+tools/virsh.c
