Fix missing data file in qemuhelpdata
* tests/Makefile.am: Add missing data file to extra dist

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -42,7 +42,8 @@ qemuhelpdata = \
 	kvm-86 \
 	qemu-0.10.5 \
 	qemu-0.9.1 \
-	qemu-kvm-0.10.5
+	qemu-kvm-0.10.5 \
+	qemu-kvm-0.11.0-rc2
 
 EXTRA_DIST =		\
         oomtrace.pl     \
