Remove all generated docs from source control
* docs/*.html, docs/devhelp/*.html, docs/html/*.html: Delete
* docs/.gitignore, docs/devhelp/.gitignore, docs/html/.gitignore:
  Ignore generated docs files
* docs/Makefile.am: Rebuild all HTML docs for 'all' target
  and include them in EXTRA_DIST and CLEANFILES
* docs/devhelp/Makefile.am: Include HTML in CLEANFILES

--- a/docs/Makefile.am
+++ b/docs/Makefile.am
@@ -65,11 +65,13 @@ EXTRA_DIST=					\
   $(patches) \
   ChangeLog.awk
 
+CLEANFILES = $(dot_html) $(apihtml)
+
 all: web $(top_builddir)/NEWS
 
-api: libvirt-api.xml libvirt-refs.xml $(srcdir)/html/index.html
+api: libvirt-api.xml libvirt-refs.xml
 
-web: $(dot_html)
+web: $(dot_html) html/index.html
 
 ChangeLog.xml: ../ChangeLog ChangeLog.awk
 	awk -f ChangeLog.awk < $< > $@
@@ -97,7 +99,7 @@ ChangeLog.html.in: ChangeLog.xml ChangeLog.xsl
 	  else echo "missing XHTML1 DTD" ; fi ; fi );
 
 
-$(srcdir)/html/index.html: libvirt-api.xml newapi.xsl page.xsl sitemap.html.in
+html/index.html: libvirt-api.xml newapi.xsl page.xsl sitemap.html.in
 	-@(if [ -x $(XSLTPROC) ] ; then \
 	  echo "Rebuilding the HTML pages from the XML API" ; \
 	  $(XSLTPROC) --nonet $(srcdir)/newapi.xsl libvirt-api.xml ; fi )
